// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly in loading state 1`] = `
<div>
  <Connect(HeaderComponent)
    user={
      Object {
        "firstName": "Jan",
        "lastName": "Novak",
        "roles": Array [
          "ROLE_SUPER_ADMIN",
          "ROLE_EMPLOYEE",
        ],
      }
    }
  />
  <main
    className="main"
  >
    <div
      className="body"
    >
      <h1
        className="bodyTitle"
      >
        Title
      </h1>
      general:text.loading
    </div>
  </main>
  <LayoutComponent />
</div>
`;

exports[`rendering renders correctly with mandatory props only 1`] = `
<div>
  <Connect(HeaderComponent)
    user={
      Object {
        "firstName": "Jan",
        "lastName": "Novak",
        "roles": Array [
          "ROLE_SUPER_ADMIN",
          "ROLE_EMPLOYEE",
        ],
      }
    }
  />
  <main
    className="main"
  >
    <div
      className="body"
    >
      Content
    </div>
  </main>
  <LayoutComponent />
</div>
`;

exports[`rendering renders correctly with title 1`] = `
<div>
  <Connect(HeaderComponent)
    user={
      Object {
        "firstName": "Jan",
        "lastName": "Novak",
        "roles": Array [
          "ROLE_SUPER_ADMIN",
          "ROLE_EMPLOYEE",
        ],
      }
    }
  />
  <main
    className="main"
  >
    <div
      className="body"
    >
      <h1
        className="bodyTitle"
      >
        Title
      </h1>
      Content
    </div>
  </main>
  <LayoutComponent />
</div>
`;
